<resources>
    <string name="app_name">Team FTIMS</string>
    <string name="start">Menu główne</string>
    <string name="plany">Plany zajęć</string>
    <string name="prowadzacy">Prowadzący</string>
    <string name="aktualnosci">Aktualności</string>
    <string name="imie_hint">Imię prowadzącego</string>
    <string name="nazwisko_hint">Nazwisko prowadzącego</string>
    <string name="szukaj">Szukaj</string>
    <string name="sale">Znajdź sale</string>
    <string name="quiz">Quiz</string>
    <string name="server_client_id">623887931728-c7g3fmaperp6tu505phe3n5lbfgdieec.apps.googleusercontent.com</string>
    <string name="warning_prowadzacy">Jeżeli dane są niepoprawne kółko będzie się kręcić w nieskończoność!</string>
</resources>
