<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/start"
        android:title="@string/start"
        app:showAsAction="never" />

    <item android:id="@+id/plany"
        android:title="@string/plany"
        app:showAsAction="never" />

    <item android:id="@+id/prowadzacy"
        android:title="@string/prowadzacy"
        app:showAsAction="never" />

    <item android:id="@+id/wydarzenia"
    android:title="@string/aktualnosci"
    app:showAsAction="never" />

    <item android:id="@+id/quiz"
        android:title="@string/quiz"
        app:showAsAction="never" />

    <item android:id="@+id/sale"
        android:title="@string/sale"
        app:showAsAction="never" />


</menu>